updated images from gallery

--- a/styles/gallery-styles.css
+++ b/styles/gallery-styles.css
@@ -9,7 +9,7 @@
         color: #FFF;
         text-align: start;
         width: 25%;
-        font-size: 64px;
+        font-size: 7vw;
         padding: 20px;
     }
     .gallery-container {
