--- a/styles/index-styles.css
+++ b/styles/index-styles.css
@@ -14,6 +14,10 @@
 .sendnews p {
     color: #FFF;
 }
+
+.mainnews {
+    border: solid black 2px;
+}
 /*Mobile*/
 @media screen and (max-width:768px) {
     /* Notícia Principal*/
@@ -105,7 +109,11 @@
     }
     #call{
         width: 93%;
-        text-align: start;
+        border-width: 1px;
+        border-style: solid;
+        border-color: internal-light-dark(rgb(118, 118, 118), rgb(133, 133, 133));
+        border-image: initial;
+        border-color: internal-light-dark(rgb(118, 118, 118), rgb(133, 133, 133));
     }
 
     .info {
@@ -118,16 +126,11 @@
     }
     
     #sendnewsbox { width: 88%;
-        flex-shrink: 1;
-        height: 24rem;
+        height: 86%;
         font-size: 24px;
         padding: 20px;
         resize: none;
 
-    }
-    #footer {
-        position: relative;
-        bottom: -700%;
     }
 }
 
