--- a/styles/index-styles.css
+++ b/styles/index-styles.css
@@ -160,11 +160,16 @@
         overflow-x: scroll; /* Enable horizontal scrolling for overflow */
         white-space: nowrap; /* Prevent images from wrapping to next line */
         padding: 10px; /* Add some padding for spacing */
+        transition: 1s;
+        transition-property: smoothing;
     }
     
     .mainnews-container img {
-        max-width: 100%; /* Ensure images don't exceed container width */
-        height: auto; /* Maintain aspect ratio */
+        max-width: 90%;
+         /* Ensure images don't exceed container width */
+        height: 90%;
+        padding: 20px;
+        margin: 0 auto; /* Maintain aspect ratio */
     }
 
     /* Notícias Constante*/
