--- a/styles/gallery-styles.css
+++ b/styles/gallery-styles.css
@@ -1,7 +1,29 @@
 .gallery {
     width: 92%;
 }
-
+/* gallery-styles.css */
+  .gallery-container {
+    position: relative;
+  }
+  
+  .overlay {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(0, 0, 0, 0.5);
+    display: none;
+    justify-content: center;
+    align-items: center;
+  }
+  
+  #enlargedImg {
+    max-width: 80%;
+    max-height: 80%;
+    object-fit: contain;
+  }
+  
 @media (max-width: 768px) {
     /* You can add styles specific to screens smaller than 768px here */
     .gallery {
@@ -40,6 +62,7 @@
         margin: 0 auto;
     }
 }
+
 
 @media (min-width: 769px) {
         .gallery {
