--- a/styles/about-styles.css
+++ b/styles/about-styles.css
@@ -7,12 +7,25 @@ main {
     flex-wrap: wrap;
     padding: 50px;
 }
+main h1, h2, article {
+    color: #f00;
+    text-align: justify;
+}
+
+h1 {
+    font-size: 2rem
+}
+h2 {
+    font-size: 1.5rem;
+}
+article {
+    font-size: 1rem;
+}
 
 div#content {
-    background-color: darkgrey;
+    background-color: #f00;
     border-radius: 11px;
     width: 90vw;
-    height: 90vh;
     margin: 0 auto;
     border: 10px;
     display: flex;
@@ -21,14 +34,15 @@ div#content {
     align-content: center;
     align-items: center;
     padding: 20px;
+    gap:20px;
     justify-content: center;
 }
 
 #G3, #GGG{
-    border: 3px solid #f00;
+    border: 3px solid #fff;
     border-radius: 10px;
+    background-color: #fff;
     width: 80vw;
-    height: 30vh;
     display: flex;
     gap: 10px;
     flex-direction: column;
