--- a/styles/header-footer.css
+++ b/styles/header-footer.css
@@ -11,7 +11,7 @@ header, #footer {
     display: flex;
     align-items: center;
     justify-content: center;
-    padding: .5%;
+    padding: 1.5%;
 }
 
 header {
